feat: p2p optimize